--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/02/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>missing after boat crashed into rocks and sank near coast of Lanzarote (ES)</b><br>Source: Can7/ABC/Publico/ELM/DiariodeNoticias/Deia/EP<br>
+Found dead: <b>10/11/04</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Mauritania</b><br>Cause of death: <b>reportedly drowned after boat travelling from Africa capsized in the Aegean Sea</b><br>Source: MNS<br>
 
 <br>
 
