--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Uday Abounahi (boy, 4)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>died in Samos (GR) after being abandoned by traffickers and neglected by authorities</b><br>Source: MNS/Infomob/Roarmag<br>
+Found dead: <b>17/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdullah A. (man)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>possible suicide, found strangled in Trausnitzstrasse refugee centre in Munich (DE)</b><br>Source: ZAG<br>
 
 <br>
 
