--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/04/06</b><br>Number of person: <b>34</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck while travelling from Mauritania to Canary Islands (ES)</b><br>Source: ST/FE/ELM/NOB/APDHA<br>
+Found dead: <b>23/06/05</b><br>Number of person: <b>27</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned in stormy waters off coast of Malta, Maltese rescue team arrived too late</b><br>Source: ORF/Unipa<br>
 
 <br>
 
