--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/01/01</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>India, Pakistan</b><br>Cause of death: <b>stowaways, drowned after ship sank in stormy waters near Antalya (TR)</b><br>Source: LOP<br>
+Found dead: <b>01/10/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 39)</b><br>Region of origin: <b>Nepal</b><br>Cause of death: <b>fell from 5th floor window in Larnaca (CY) while escaping police responding to a noise report</b><br>Source: CypMail<br>
 
 <br>
 
