--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/10/02</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N. (7 women; 7 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly drowned after boat capsized near Barbate (ES), trying to avoid detection by SIVE cameras</b><br>Source: MNS/AFP<br>
+Found dead: <b>03/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>died of hypothermia after crossing the Evros River from Turkey to Greece</b><br>Source: Independent<br>
 
 <br>
 
