--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/05/07</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N. (3 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after boat from Libya sank near Malta on way to Italy</b><br>Source: Reu./FE/TimesM/ANSA/MNS<br>
+Found dead: <b>27/04/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>stowaways, found dead in the hold of Turkish cargo ship in port of Cartagena (ES)</b><br>Source: MNS/ST<br>
 
 <br>
 
