--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 06</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>bodies thrown overboard from boat travelling from Africa to Spain, boat saved by American ARC ship</b><br>Source: MNS/APDHA/YatchingWorld<br>
+Found dead: <b>14/02/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fata Abdul (man, 23)</b><br>Region of origin: <b>Yemen</b><br>Cause of death: <b>suicide, hanged himself with t-shirt at detention centre in Thessaloniki (GR)</b><br>Source: KI/aida/IRR<br>
 
 <br>
 
