--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2009</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (mostly children)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died in a fire in unsafe building in Paris (FR), inhabited by many immigrants with no other choice of accommodation</b><br>Source: SurprisingE<br>
+Found dead: <b>14/06/03</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>reportedly drowned after dinghy capsized near Tarifa (ES) on way to Spain</b><br>Source: MNS<br>
 
 <br>
 
