--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (1 child)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>stowaways, suffocated in truck in Avellino (IT)</b><br>Source: DPA/MNS/HRFT<br>
+Found dead: <b>10/11/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>found dead on boat drifting near Pantelleria (IT)</b><br>Source: INDi/IPL/Unipa<br>
 
 <br>
 
