--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fahrettin Dogan (man, 29)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>missing after boat sunk in the Evros River on Turkish-Greek border; was fleeing post-coup crackdown in Turkey</b><br>Source: Reu./TDEMD/IOM Turkey/TurkeyPurge/TRMinute<br>
+Found dead: <b>Jul 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ahmet Moh. Irak (man, 19)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, found dead in truck on ferry travelling from Patras (GR) to Brindisi (IT)</b><br>Source: IRR<br>
 
 <br>
 
