--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned, found dead in Spanish waters near the Spanish enclave of Ceuta (ES)</b><br>Source: MNS<br>
+Found dead: <b>26/06/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Getenet Legese Yacob (man, 32)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>died after attempting to board moving train in Coquelles (FR)</b><br>Source: Parisien/GuardianUn./IBT<br>
 
 <br>
 
