--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/06/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Getenet Legese Yacob (man, 32)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>died after attempting to board moving train in Coquelles (FR)</b><br>Source: Parisien/GuardianUn./IBT<br>
+Found dead: <b>25/03/00</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (3 women; 3 men)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>drowned near Kos (GR) after vessel capsized</b><br>Source: MNS/taz<br>
 
 <br>
 
