--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/09/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Former Yugoslavia</b><br>Cause of death: <b>died in deportaion centre JVA Büren (DE) due to pulmonary embolism and lack of proper medical care</b><br>Source: INDd, Hilfe MenschenAB<br>
+Found dead: <b>Feb 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>asylum seeker, died while giving birth at hospital in Dublin (IE) that did not know her medical history</b><br>Source: MN<br>
 
 <br>
 
