--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/07/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (26)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>drowned in the Moselle River near Schweich (DE) while trying to escape from police</b><br>Source: Trierer Volksfreund/ZAG<br>
+Found dead: <b>05/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Saulius Gonta (man, 19)</b><br>Region of origin: <b>Lithuania</b><br>Cause of death: <b>reportedly fell out of truck and ran over by car near El Ejido (ES)</b><br>Source: EP<br>
 
 <br>
 
