--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/01/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 54)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>froze to death in river on Russian-Estonian border</b><br>Source: EXP/EUbusiness/GP<br>
+Found dead: <b>18/03/17</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies found at unspecified location between North Africa and Italy</b><br>Source: IOM Italy<br>
 
 <br>
 
