--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/10/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Esawy Rashedal (25)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>drowned after being forced overboard by smugglers in waters near Otranto (IT)</b><br>Source: IRR<br>
+Found dead: <b>03/10/03</b><br>Number of person: <b>210</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>50 drowned after boat from Libya sank off Tunisia; 160 missing, 41 rescued</b><br>Source: MNS<br>
 
 <br>
 
