--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/05/17</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>7 found dead during rescue operation in the Mediterranean Sea; 13 missing, 484 rescued</b><br>Source: RTLNieuws/Diario de Noticias/IOM Italy/Reu.<br>
+Found dead: <b>25/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead near Barbate (ES); had probably attempted to cross from Morocco</b><br>Source: IOM<br>
 
 <br>
 
