--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/05/98</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned in boat accident near Vlorë (AL) while trying to cross the Adriatic Sea</b><br>Source: MNS<br>
+Found dead: <b>05/03/16</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border police while trying to cross from Syria to Turkey</b><br>Source: IBTimes<br>
 
 <br>
 
