--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/09/97</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>reportedly drowned near Tangier (MA) while travelling to Spain</b><br>Source: VK/taz/EP/MNS/ELM<br>
+Found dead: <b>12/10/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jimmy Mubenga (man, 46)</b><br>Region of origin: <b>Angola</b><br>Cause of death: <b>died of cardiac arrest on deportation flight from London (GB)</b><br>Source: GuardianUn./NR/INDgb/Demotix/BBC/Rue89/FE<br>
 
 <br>
 
