--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/10/16</b><br>Number of person: <b>90</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat to Italy sank off coast of Libya</b><br>Source: AP/NYtimes<br>
+Found dead: <b>18/06/07</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after vessel capsized near coast of southern Sicily (IT)</b><br>Source: MNS<br>
 
 <br>
 
