--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/05/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 45)</b><br>Region of origin: <b>Eritrea or Ethiopia</b><br>Cause of death: <b>killed with a knife in fight on Ny-paradis street, near refugee centre in borough of Ytrebygda, Bergen (NO)</b><br>Source: NRK<br>
+Found dead: <b>01/11/12</b><br>Number of person: <b>21</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>19 bodies found off coast of Tangier (MA) over 2 weeks; 2 missing</b><br>Source: AFP/FE<br>
 
 <br>
 
