--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/08/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned in the Oder River on Polish-German border near Genschmar (DE)</b><br>Source: German Government<br>
+Found dead: <b>Jun 12</b><br>Number of person: <b>55</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Sudan, Eritrea</b><br>Cause of death: <b>died in attempt to reach Italy from Tripoli (LY); 1 survivor</b><br>Source: NOB/B4P/GuardianUn./MaltaToday<br>
 
 <br>
 
