--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Sep 97</b><br>Number of person: <b>26</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned while trying to cross the Strait of Gibraltar</b><br>Source: Morgengr./IRR<br>
+Found dead: <b>13/04/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaway, jumped from ship to avoid border control in port of Genoa (IT)</b><br>Source: GiulianoNewsChronicle/ANSA<br>
 
 <br>
 
