--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/06/01</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after raft sank near Apulia (IT)</b><br>Source: MNS<br>
+Found dead: <b>09/11/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ngoc-Dung Hoang (41)</b><br>Region of origin: <b>Vietnam</b><br>Cause of death: <b>jumped off building in Berlin (DE) out of fear of deportation</b><br>Source: ARI<br>
 
 <br>
 
