--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/01/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 54)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>jumped from window during police inspection at his home in Nicosia (CY); failed asylum seeker</b><br>Source: CypMail<br>
+Found dead: <b>30/01/04</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>China, Afghanistan</b><br>Cause of death: <b>reportedly drowned after boat sank during storm near Rafina (GR)</b><br>Source: MNS<br>
 
 <br>
 
