--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/06/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sillih Peder (23)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>shot by security forces while trying to enter Turkey near Aslanyazi (TR)</b><br>Source: HRFT/ProAsyl<br>
+Found dead: <b>22/02/06</b><br>Number of person: <b>16</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died of hypothermia, starvation and epilepsy in the Alboran Sea while travelling to Spain</b><br>Source: AFVIC<br>
 
 <br>
 
