--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/09/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, found dead in cargo ship in Seville (ES)</b><br>Source: ODP<br>
+Found dead: <b>05/09/16</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in the Mediterranean Sea trying to reach Europe from Libya in overcrowded rubber boats</b><br>Source: Reu./AFP/JIJI/Africa-News/ANSA<br>
 
 <br>
 
