--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/10/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Omid Jamil Ali (man, 21)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>died jumping from bridge onto train to try and enter the Channel Tunnel in France</b><br>Source: IRR<br>
+Found dead: <b>21/05/01</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>blown up in minefield in Greece trying to cross Turkish-Greek border</b><br>Source: DPA/AthensNewsAgency<br>
 
 <br>
 
